Move to typescript

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "authservice",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "jest"
   },
